// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SavedSearchList render the SavedSearchList should render empty 1`] = `
<body
  class="modal-open"
  style="padding-right: 0px;"
>
  <div
    aria-hidden="true"
  />
  <div
    aria-hidden="true"
    role="dialog"
  >
    <div
      class="fade modal-backdrop in"
    />
    <div
      class="fade Modal-nuree8-0 UjHmV in modal"
      role="dialog"
      style="display: block; padding-right: 0px;"
      tabindex="-1"
    >
      <div
        class="modal-dialog"
      >
        <div
          class="modal-content"
          role="document"
        >
          <div
            class="modal-body"
          >
            <div
              class="search"
              style="margin-top: 15px;"
            >
              <form
                class="form-inline"
              >
                <div
                  class="form-group has-feedback"
                >
                  <input
                    autocomplete="off"
                    class="query form-control"
                    id="common-search-form-query-input"
                    placeholder="Enter search query..."
                    spellcheck="false"
                    style="width: auto;"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="form-group"
                  style="margin-left: 5px;"
                >
                  <button
                    class="Button__StyledButton-c9cbmb-0 jVYrA submit-button btn btn-default"
                    type="submit"
                  >
                    Search
                  </button>
                </div>
                <div
                  class="form-group"
                  style="margin-left: 5px;"
                >
                  <button
                    class="Button__StyledButton-c9cbmb-0 jVYrA reset-button btn btn-default"
                    type="reset"
                  >
                    Reset
                  </button>
                </div>
              </form>
            </div>
            <div
              class="Alert-sc-1yucn9g-0 gTlUyR SavedSearchList__NoSavedSearches-sc-1r3qvm6-1 gmJDqJ alert alert-info"
              role="alert"
            >
              <svg
                class="svg-inline--fa fa-exclamation-triangle"
              />
              <span>
                No saved searches found.
              </span>
            </div>
          </div>
          <div
            class="modal-footer"
          >
            <button
              class="Button__StyledButton-c9cbmb-0 jVYrA btn btn-primary"
              disabled=""
              type="button"
            >
              Load
            </button>
            <button
              class="Button__StyledButton-c9cbmb-0 jVYrA btn btn-default"
              disabled=""
              type="button"
            >
              Delete
            </button>
            <button
              class="Button__StyledButton-c9cbmb-0 jVYrA btn btn-default"
              type="button"
            >
              Cancel
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`SavedSearchList render the SavedSearchList should render with views 1`] = `
<body
  class="modal-open"
  style="padding-right: 0px;"
>
  <div
    aria-hidden="true"
  />
  <div
    aria-hidden="true"
    role="dialog"
  >
    <div
      class="fade modal-backdrop in"
    />
    <div
      class="fade Modal-nuree8-0 UjHmV in modal"
      role="dialog"
      style="display: block; padding-right: 0px;"
      tabindex="-1"
    >
      <div
        class="modal-dialog"
      >
        <div
          class="modal-content"
          role="document"
        >
          <div
            class="modal-body"
          >
            <div
              class="search"
              style="margin-top: 15px;"
            >
              <form
                class="form-inline"
              >
                <div
                  class="form-group has-feedback"
                >
                  <input
                    autocomplete="off"
                    class="query form-control"
                    id="common-search-form-query-input"
                    placeholder="Enter search query..."
                    spellcheck="false"
                    style="width: auto;"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="form-group"
                  style="margin-left: 5px;"
                >
                  <button
                    class="Button__StyledButton-c9cbmb-0 jVYrA submit-button btn btn-default"
                    type="submit"
                  >
                    Search
                  </button>
                </div>
                <div
                  class="form-group"
                  style="margin-left: 5px;"
                >
                  <button
                    class="Button__StyledButton-c9cbmb-0 jVYrA reset-button btn btn-default"
                    type="reset"
                  >
                    Reset
                  </button>
                </div>
              </form>
            </div>
            <div
              class="form-inline page-size"
              style="float: right;"
            >
              <div
                class="FormGroup__StyledFormGroup-sc-1wv4cm9-0 ekazNr form-group"
              >
                <label
                  class="ControlLabel-sc-1edmum5-0 hCskeX control-label"
                  for="page-size"
                >
                  Show:
                </label>
                <span>
                  <select
                    class="FormControl-sc-1amoaox-0 ibEGYG form-control input-sm"
                    id="page-size"
                    label="Show:"
                    name="page-size"
                    placeholder=""
                    type="select"
                  >
                    <option
                      value="5"
                    >
                      5
                    </option>
                    <option
                      value="10"
                    >
                      10
                    </option>
                    <option
                      value="15"
                    >
                      15
                    </option>
                  </select>
                  
                </span>
              </div>
            </div>
            <div
              class="list-group"
            >
              <button
                class="ListGroupItem__StyledListGroupItem-sc-1ky0joo-0 bgAGM list-group-item"
                type="button"
              >
                test-0
              </button>
            </div>
            <div
              class="text-center pagination-wrapper"
            >
              <ul
                class="pagination pagination-sm"
              >
                <li
                  class="disabled"
                >
                  <a
                    href="#"
                    role="button"
                    style="pointer-events: none;"
                    tabindex="-1"
                  >
                    <span
                      aria-label="First"
                    >
                      «
                    </span>
                  </a>
                </li>
                <li
                  class="disabled"
                >
                  <a
                    href="#"
                    role="button"
                    style="pointer-events: none;"
                    tabindex="-1"
                  >
                    <span
                      aria-label="Previous"
                    >
                      ‹
                    </span>
                  </a>
                </li>
                <li
                  class="active"
                >
                  <a
                    href="#"
                    role="button"
                  >
                    1
                  </a>
                </li>
                <li
                  class="disabled"
                >
                  <a
                    href="#"
                    role="button"
                    style="pointer-events: none;"
                    tabindex="-1"
                  >
                    <span
                      aria-label="Next"
                    >
                      ›
                    </span>
                  </a>
                </li>
                <li
                  class="disabled"
                >
                  <a
                    href="#"
                    role="button"
                    style="pointer-events: none;"
                    tabindex="-1"
                  >
                    <span
                      aria-label="Last"
                    >
                      »
                    </span>
                  </a>
                </li>
              </ul>
            </div>
          </div>
          <div
            class="modal-footer"
          >
            <button
              class="Button__StyledButton-c9cbmb-0 jVYrA btn btn-primary"
              disabled=""
              type="button"
            >
              Load
            </button>
            <button
              class="Button__StyledButton-c9cbmb-0 jVYrA btn btn-default"
              disabled=""
              type="button"
            >
              Delete
            </button>
            <button
              class="Button__StyledButton-c9cbmb-0 jVYrA btn btn-default"
              type="button"
            >
              Cancel
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
